# libbaalue

./: .gitignore  CMakeLists.txt  Makefile.am  NAMESPACE  NEWS  README.md  TODO  bootstrap.sh  config.c  config.h.in  configure.ac  do_all_in_one_step.sh  libbaalue.c  libbaalue.h  libbaalue.pc.in  makefile  network.c
Documentation/: Makefile.am  device_managment.txt
cmake/modules/: FindLibBSD.cmake  FindLibConfig.cmake
examples/: Makefile.am  can_recv.c  can_send.c  inet_daytime_client.c  inet_daytime_server.c  lcd1602.c  time_triggert_simple.c  time_triggert_uds.c  time_triggert_uds_server.c  udp_client.c  udp_mgmt_client.c  udp_mgmt_ping_client.c  udp_mgmt_reboot_client.c  udp_mgmt_server.c  user_group_info.c
man/: Makefile.am  libbaalue.3
po/: POTFILES.in  de.po  libbaalue.pot
scripts/: Makefile.am  libbaalue_vcan_delete.sh  libbaalue_vcan_init.sh  libbaalue_vcan_rmmod.sh
src/: Makefile.am  can_lin.c  device_mgmt.c  error.c  fiber.c  group.c  helper.c  lcd160x.c  libbaalue-private.h  libbaalue.h  libbaalue_lcd160x.h  libbaalue_types.h  network.c  process.c  serialize.c  sh_mem.c  sh_mq.c  user.c  wrapper.c
